--- a/DataProtectioPostgresKey/DataProtectioPostgresKey/DataProtectioPostgresKey.csproj
+++ b/DataProtectioPostgresKey/DataProtectioPostgresKey/DataProtectioPostgresKey.csproj
@@ -1,9 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>DataProtectioPostgresPersist</AssemblyName>
-    <RootNamespace>DataProtectioPostgresPersist</RootNamespace>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>DataProtectionPostgresPersist</AssemblyName>
+    <RootNamespace>DataProtectionPostgresPersist</RootNamespace>
+    <RepositoryUrl>https://github.com/axzxs2001/DataProtectioPostgresKey.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageIconUrl>https://s.gravatar.com/userimage/127492023/df724e8c3fd9e368516db08e174ef09f.png?size=200</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/axzxs2001/DataProtectioPostgresKey.git</PackageProjectUrl>
+    <Authors>桂素伟</Authors>
+    <Description>asp.net core Data Protection user Postgres Persist</Description>
+    <PackageId>DataProtectionPostgresPersist</PackageId>
+    <Product>DataProtectionPostgresPersist</Product>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
