--- a/DataProtectioPostgresKey/DataProtectioPostgresKey/DataProtectioPostgresKey.csproj
+++ b/DataProtectioPostgresKey/DataProtectioPostgresKey/DataProtectioPostgresKey.csproj
@@ -14,11 +14,17 @@
     <Product>DataProtectionPostgresPersist</Product>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Version>1.0.2</Version>
+    <PackageReleaseNotes>public void ConfigureServices(IServiceCollection services)
+ {
+        services.AddDataProtection().PersistKeysToPostgres(Configuration.GetConnectionString("Postgre"));
+       //……
+}</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="3.0.0-preview8.19405.7" />
-    <PackageReference Include="Npgsql" Version="4.1.0-preview1" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="2.2.0" />
+    <PackageReference Include="Npgsql" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
